[package]
name = "loku"
version = "0.0.1"
edition = "2021"
description = "A context and prompt template generator"
authors = ["mishaal79"]
license = "MIT"
repository = "https://github.com/mishaal79/loku"
keywords = ["cli", "template", "generator", "claude", "ai"]
categories = ["command-line-utilities"]

[[bin]]
name = "loku"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
dirs = "5.0"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"